# WaifuBot

./: .gitmodules  CMakeLists.txt  README.md
header/: commands.hpp  waifubot.hpp
src/: commands.cpp  main.cpp  waifubot.cpp
src/cmd/: about_command.cpp
